# pixiv-api

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
.sisyphus/run-continuation/: ses_19b6248b2ffeOzsS1vAPAQ1Zt2.json
docs/superpowers/plans/: 2026-05-27-pixiv-api-implementation.md  2026-05-28-downloader-enhancement.md
docs/superpowers/specs/: 2026-05-28-downloader-enhancement-design.md
pixiv-api/: Cargo.toml
pixiv-api/examples/: basic_usage.rs  download_illusts.rs  get_token.rs
pixiv-api/src/: config.rs  error.rs  lib.rs
pixiv-api/src/api/: auth.rs  bypass.rs  headers.rs  illust.rs  misc.rs  mod.rs  novel.rs  search.rs  user.rs
pixiv-api/src/downloader/: mod.rs
pixiv-api/src/models/: common.rs  illust.rs  mod.rs  novel.rs  search.rs  user.rs
pixiv-api/src/utils/: config.rs
pixiv-api/tests/: api_schema_tests.rs  integration.rs
pixiv-api/tests/api_schema_tests/: illust_tests.rs  novel_misc_tests.rs  search_tests.rs  user_tests.rs
pixiv-dl/: Cargo.toml
pixiv-dl/src/: config.rs  main.rs
src/: lib.rs
src/api/: mod.rs
src/downloader/: mod.rs
src/utils/: errors.rs
