[package]
name = "pixiv-api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
hex = "0.4"
url = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

[features]
gfw-bypass = []
